# serialize

./: .dockerignore  .gitignore  .gitmodules  .prettierignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  build.yml  check-formatting.yml
cmake/: PajladaSerializeConfig.cmake.in
examples/: IncludePajladaSerialize.cmake  README.md
examples/simple/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt
include/pajlada/: serialize.hpp
include/pajlada/serialize/: common.hpp  deserialize.hpp  internal-typename.hpp  internal.hpp  serialize.hpp
scripts/: README.md  docker-build.sh  docker-example.sh  docker-test.sh  install-dependencies-fedora.sh  run-test.sh
src/: main.cpp
tests/: CMakeLists.txt
tests/src/: optional.cpp  unsorted.cpp  variant.cpp
